# ASDfR

./: README.md  setpoint_gen.rar
Ass1/src/image_processing/: CMakeLists.txt  package.xml
Ass1/src/image_processing/src/: pub_brightness.cpp  pub_cog.cpp  sub_brightness.cpp
Ass2/: nano_timer.c  sig_timer.c  test_sig
Ass2/data/: time_values_10.csv  time_values_100.csv  time_values_1000.csv
ros2_nodes/src/jiwy_simulator/src/: jiwy_simulator.cpp
ros2_nodes/src/setpoint_gen/: CMakeLists.txt  package.xml
ros2_nodes/src/setpoint_gen/launch/: brightness_setpoint.launch.py  unit_test.launch.py
ros2_nodes/src/setpoint_gen/src/: brightness_setpoint.cpp  setpoint_generator.cpp  sub_moving_camera_output.cpp
